source/stylesheets/screen.css.scss
/* ... */
.lang-selector {
  background-color: $lang-select-bg;
  width: 100%;
  font-weight: bold;
  a {
    display: block;
    float:left;
    color: $lang-select-text;
    text-decoration: none;
    padding: 0 10px;
    margin: 10px;
    line-height: 30px;
    outline: 0;
    
    &:hover {
    background-color:rgba(239,242,247,0.2);
	border-radius:5px;
    }

    &:active, &:focus {
      border-radius:5px;
    }

    &.active {
      border-radius:5px;
      background-color: $lang-select-active-bg;
      color: $lang-select-active-text;
    }
  }

  &:after {
    content: '';
    clear: both;
    display: block;
  }
}

////////////////////////////////////////////////////////////////////////////////
// CONTENT STYLES
////////////////////////////////////////////////////////////////////////////////
// This is all the stuff with the light background in the left half of the page

.content {
  // to place content above the dark box
  position: relative;
  z-index: 30;
  @extend %default-font;

  &:after {
    content: '';
    display: block;
    clear: both;
  }

  &>h1, &>h2, &>h3, &>h4, &>h5, &>h6, &>p, &>table, &>ul, &>ol, &>aside, &>dl {
    margin-right: $examples-width;
    padding: 0 $main-padding;
    box-sizing: border-box;
    display: block;

    @extend %left-col;
  }

  &>ul, &>ol {
    padding-left: $main-padding + 15px;
  }

  // the div is the tocify hidden div for placeholding stuff
  &>h1, &>h2, &>div {
    clear:both;
  }

  h1 {
    @extend %header-font;
    font-size: 32px;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    margin-bottom: $h1-margin-bottom;
    margin-top: 2em;
    border-top: 1px solid #ddd;
  }

  h1:first-child, div:first-child + h1 {
    border-top-width: 0;
    margin-top: 0;
  }

  h2 {
    @extend %header-font;
    font-size: 22px;
    margin-top: 4em;
    margin-bottom: 0;
    border-top: 1px solid #ccc;
    padding-top: 1.2em;
    padding-bottom: 1.2em;
  }
  
  #head2 {
    @extend %header-font;
    font-size: 22px;
    margin-top: 4em;
    margin-bottom: 0;
    border-top: 1px solid #ccc;
    padding-top: 1.2em;
    padding-bottom: 1.2em;
  }
  
  // HTTP tags in front of headers
  #post_tag {
      @extend %code-font;
      font-size: 22px;
      color:#f6a916;
  }
  #put_tag {
      @extend %code-font;
      font-size: 22px;
      color:#4482f7;
  }
  #get_tag {
      @extend %code-font;
      font-size: 22px;
      color:#82e150;
  }
  #delete_tag {
      @extend %code-font;
      font-size: 22px;
      color:#ff3232;
  }

  // h2s right after h1s should bump right up
  // against the h1s.
  h1 + h2, h1 + div + h2 {
    margin-top: $h1-margin-bottom * -1;
    border-top: none;
  }
  
  h3 {
    @extend %header-font;
    font-size: 18px;
    margin-top: 2.5em;
    margin-bottom: 0.8em;
  }

  h4, h5, h6 {
    @extend %header-font;
    font-size: 14px;
    margin-top: 2.5em;
    margin-bottom: 0.8em;
  }

  h4, h5, h6 {
    font-size: 10px;
  }

  hr {
    margin: 2em 0;
    border-top: 2px solid $examples-bg;
    border-bottom: 2px solid $main-bg;
  }

  table {
    margin-bottom: 1em;
    overflow: auto;
    font-size:$notice-table-text;
    
    th,td {
      text-align: left;
      vertical-align: top;
      line-height: 1.6;
    }

    th {
      padding: 5px 10px;
      border-bottom: 1px solid #ccc;
      vertical-align: bottom;
    }

    td {
      padding: 10px;
    }

    tr:last-child {
      border-bottom: 1px solid #ccc;
    }

    tr:nth-child(odd)>td {
      background-color: lighten($main-bg,4.2%);
    }

    tr:nth-child(even)>td {
      background-color: lighten($main-bg,2.4%);
    }
  }

  dt {
    font-weight: bold;
  }

  dd {
    margin-left: 15px;
  }

  p, li, dt, dd {
    line-height: 1.6;
    margin-top: 0;
  }

  img {
    max-width: 100%;
  }

  code {
    background-color: rgba(0,0,0,0.05);
    padding: 3px;
    border-radius: 3px;
    @extend %break-words;
    @extend %code-font;
  }

  pre>code {
    background-color: transparent;
    padding: 0;
  }

  aside {
    padding-top: 1em;
    padding-bottom: 1em;
    margin-top: 1.5em;
    margin-bottom: 1.5em;
    background: $aside-notice-bg;
    line-height: 1.6;
    color: $aside-notice-text;

    &.warning {
      background-color: $aside-warning-bg;
    }

    &.success {
      background-color: $aside-success-bg;
    }
  }
  aside>a {
      color: #FFF;
  }

  aside:before {
    vertical-align: middle;
    padding-right: 0.5em;
  }

  aside.notice:before {
    @extend %icon-info-sign;
  }

  aside.warning:before {
    @extend %icon-exclamation-sign;
  }

  aside.success:before {
    @extend %icon-ok-sign;
  }

  .search-highlight {
    padding: 2px;
    margin: -2px;
    border-radius: 4px;
    background: linear-gradient(to top left, #1E70DD 0%, #1E70DD 100%);
    color: #fff;
  }
}
/* ... */

